# PixelPal

./: .gitignore  PixelPet.spec  README.md  config.example.yaml  pyproject.toml
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-06-26-pixelpet.md
docs/superpowers/specs/: 2026-06-26-pixelpet-design.md
src/pixelpet/: app.py  asset_loader.py  auto_start.py  behavior_scheduler.py  chat_service.py  config_manager.py  i18n.py  main.py  pet_widget.py  pet_window.py  settings_dialog.py  speech_bubble.py  state_machine.py  tray_icon.py
src/pixelpet/llm_client/: __init__.py  base.py  deepseek.py
tests/: conftest.py  test_asset_loader.py  test_auto_start.py  test_behavior_scheduler.py  test_chat_service.py  test_config_manager.py  test_deepseek_client.py  test_state_machine.py
